--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,7 @@ section {
   background-color: #fff;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  min-height: 40vh;
 }
 
 section h2 {
